[package]
name = "w10k"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
futures-util = "0.3.25"
pretty_env_logger = "0.4.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
uuid = { version = "1.2.2", features = ["v4"] }
warp = "0.3.3"

[[bin]]
name = "broadcast"
path = "src/broadcast/main.rs"

[[bin]]
name = "client2client"
path = "src/client2client/main.rs"
